--- a/css/layout.css
+++ b/css/layout.css
@@ -35,7 +35,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: url(IMG_8643.jpg) no-repeat top center  lavender;
+   background-color: #11ABB0, lavenderblush;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
