--- a/css/layout.css
+++ b/css/layout.css
@@ -35,7 +35,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background-color: lavenderblush;
+   background:#0F9095 url(/IMG_8643.jpg) no-repeat;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
