--- a/css/layout.css
+++ b/css/layout.css
@@ -35,9 +35,9 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background:lavender url('/IMG_8643.jpg') no-repeat;
-/*    background-repeat: no-repeat;
- */   background-size: cover !important;
+   background-image: url(/IMG_8643.jpg);
+   background-repeat: no-repeat;
+   background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
