--- a/css/layout.css
+++ b/css/layout.css
@@ -171,7 +171,7 @@ ul#nav li a {
    line-height: 32px;
 	text-decoration: none;
    text-align: left;
-   color: rgb(221, 17, 17);
+   color: rgb(183, 8, 20);
 
 	-webkit-transition: color .2s ease-in-out;
 	-moz-transition: color .2s ease-in-out;
@@ -182,13 +182,13 @@ ul#nav li a {
 
 ul#nav li a:active { background-color: transparent !important; }
 ul#nav li.current a { color: #F06000; }
-
+/* 
 .dark-mode div{
    color: rgb(0, 0, 11);
    background: #0f0f0f;
    color: whitesmoke;
 
- }
+ } */
  .image{
    width:30px;
    height:30px;
@@ -207,7 +207,7 @@ ul#nav li.current a { color: #F06000; }
    overflow: hidden;
 }
 
-#about a, #about a:visited  { color: #fff; }
+#about a, #about a:visited  { color: rgb(125, 2, 92); }
 #about a:hover, #about a:focus { color: #11ABB0; }
 
 #about h2 {
