--- a/css/layout.css
+++ b/css/layout.css
@@ -35,7 +35,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background-color:rgb(120, 150, 3);
+   background-color:rgb(240, 126, 250);
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -61,14 +61,14 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
-   color: rgb(250, 98, 3);
+   color: rgb(8, 2, 168);
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #f85903;
+   color: #080808;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(129, 2, 2, 0.5);
@@ -80,7 +80,7 @@ header .banner-text h3 a {
 header .banner-text hr {
    width: 60%;
    margin: 18px auto 24px auto;
-   border-color: #fa67b1;
+   border-color: #fe78bb;
    border-color: rgba(150, 150, 150, .1);
 }
 
