--- a/css/layout.css
+++ b/css/layout.css
@@ -35,7 +35,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background-color:rgb(240, 126, 250);
+   background-color:rgb(242, 134, 252);
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -68,7 +68,7 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #870202;
+   color: #13015b;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(129, 2, 2, 0.5);
@@ -80,7 +80,7 @@ header .banner-text h3 a {
 header .banner-text hr {
    width: 60%;
    margin: 18px auto 24px auto;
-   border-color: #fe78bb;
+   border-color: #080191;
    border-color: rgba(150, 150, 150, .1);
 }
 
@@ -96,7 +96,7 @@ header .social li {
    margin: 0 15px;
    padding: 0;
 }
-header .social li a { color: rgb(171, 2, 39); }
+header .social li a { color: rgb(67, 1, 10); }
 header .social li a:hover { color: #013234; }
 
 /* scrolldown link */
