--- a/css/layout.css
+++ b/css/layout.css
@@ -61,14 +61,14 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
-   color: rgb(1, 0, 11);
+   color: rgb(12, 1, 131);
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #13015b;
+   color: #1a027e;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(129, 2, 2, 0.5);
@@ -250,7 +250,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #resume {
-   background: #fff;
+   background: rgb(138, 136, 250);
    padding-top: 90px;
    padding-bottom: 72px;
    overflow: hidden;
