--- a/css/layout.css
+++ b/css/layout.css
@@ -257,7 +257,7 @@ ul#nav li.current a { color: #F06000; }
 }
 
 #resume a, #resume a:visited  { color: #11ABB0; }
-#resume a:hover, #resume a:focus { color: #313131; }
+#resume a:hover, #resume a:focus { color: #6b0101; }
 
 #resume h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
@@ -283,7 +283,7 @@ ul#nav li.current a { color: #F06000; }
 #resume .
 {
    font: 16px/24px 'librebaskerville-italic', serif;
-   color: #6E7881;
+   color: #013563;
    margin-bottom: 18px;
    margin-top: 9px;
 }
