--- a/css/layout.css
+++ b/css/layout.css
@@ -541,12 +541,12 @@ ul#nav li.current a { color: #F06000; }
 }
 .popup-modal .description-box p {
 	font: 14px/24px 'opensans-regular', sans-serif;
-   color: #A1A1A1;
+   color: #7a0202;
    margin-bottom: 12px;
 }
 .popup-modal .description-box .categories {
    font: 11px/21px 'opensans-light', sans-serif;
-   color: #A1A1A1;
+   color: #740202;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: block;
