--- a/css/layout.css
+++ b/css/layout.css
@@ -119,7 +119,7 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #17e5ec; }
+header .scrolldown a:hover { color:#0F9095; }
 
 /* primary navigation
 --------------------------------------------------------------------- */
