--- a/css/layout.css
+++ b/css/layout.css
@@ -672,7 +672,7 @@ call-to-action .button {
    font: 18px/24px 'opensans-bold', sans-serif;   
    text-transform: uppercase;
    letter-spacing: 3px;
-   color: #fff;
+   color: rgb(7, 1, 87);
 }
 #testimonials h1 span { display: none; }
 #testimonials .header-col { padding-top: 9px; }
