--- a/css/layout.css
+++ b/css/layout.css
@@ -692,8 +692,7 @@ call-to-action .button {
    margin: 0 0px 30px 0px;
    padding-left: 0;
    position: relative;
-/*    text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
- */}
+}
 #testimonials blockquote:before { content: none; }
 #testimonials blockquote p {
    font-family: 'librebaskerville-italic', serif;
