--- a/css/layout.css
+++ b/css/layout.css
@@ -22,7 +22,7 @@
 /* a. General Styles
 /* ------------------------------------------------------------------ */
 
-body { background: #abc4f9;
+body { background:;
    font: 16px/24px 'librebaskerville-italic', serif;
  }
 
