--- a/css/layout.css
+++ b/css/layout.css
@@ -22,7 +22,7 @@
 /* a. General Styles
 /* ------------------------------------------------------------------ */
 
-body { background:;
+body { background:#A7F4F6;
    font: 16px/24px 'librebaskerville-italic', serif;
  }
 
